[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-importo"
authors = [
    {name = "Andy Babic", email = "andy.babic@torchbox.com"}
]
description = "A developer-friendly framework for importing legacy data into Django and Wagtail projects."
keywords = [
  "django",
  "wagtail",
  "import",
  "migrate",
  "migration",
  "transfer",
  "legacy",
  "data",
  "pages",
  "models",
  "utility",
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 2",
    "Framework :: Wagtail :: 3",
    "Framework :: Wagtail :: 4",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "Django>=3.0,<4.3",
]

[tool.flit.module]
name = "importo"

[project.optional-dependencies]
wagtail = [
    "Wagtail>3.0",
]
test = [
    "pytest >=7.3",
    "pytest-cov",
]

[tool.black]
line_length = 88
target-version = ["py38"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
  )/
)
'''
