[bdist_wheel]
universal = 1

[metadata]
name = django-importo
version = attr: importo.get_version
author = Andy Babic
author_email = andyjbabic@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
keywords= django migrate legacy data import wagtail pages models utility
classifiers=
    Environment :: Web Environment
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Wagtail
    Framework :: Wagtail :: 2
    Framework :: Wagtail :: 3
    Framework :: Wagtail :: 4

[options]
packages = find:
include_package_data = true
install_requires =
    Django >=3.2
    Wagtail >=2.16
python_requires = >=3.7

[options.packages.find]
exclude =
    importo.testapp*

[options.extras_require]
lint =
    black ==22.12.0
    isort ==5.10.1
    flake8 ==6.0.0
test =
    pytest-cov ==4.0.0
    pytest-mock ==3.10.0
    pytest-django ==4.5.2
    pytest ==7.2.0

[flake8]
ignore = C901,W503
exclude = */migrations/*,*/node_modules/*
max-line-length = 120

[isort]
known_first_party=importo
profile=black
skip=migrations,node_modules,venv
sections=STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section=THIRDPARTY
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
